[project]
name = "tiktok-research-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rsoleyma", email = "ramin.soleymani@bsc.es" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
